[package]
edition = "2021"
name = "game"
version = "0.1.0"

[dependencies]
ckb-cinnabar-verifier = {workspace = true}
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde_molecule = {version = "1.1.1", default-features = false, features = ["alloc"]}

common = {path = "../../core/common"}
