[package]
edition = "2021"
name = "common"
version = "0.1.0"

[dependencies]
ckb-std = "0.17.0"

hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
serde_molecule = {version = "1.1.1", default-features = false, features = ["alloc"]}
