[package]
edition = "2021"
name = "common"
version = "0.1.0"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_molecule = { workspace = true }

ckb-std = { version = "0.17.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
debug = []
card = []
enemy = ["effect"]
effect = []
operation = []
player = []
contract = ["ckb-std"]
