[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]

[build-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_molecule = { workspace = true }

common = { path = "../common", features = ["card", "enemy", "player"] }
